# notes-ai-agent-api

./: .env.example  Dockerfile  docker-stack.yml  pyproject.toml
.github/workflows/: build-and-push.yml  deploy.yml  pipeline.yml
app/: config.py  db.py  dependencies.py  main.py
app/agents/: rag_sql.py
app/common/: types.py
app/db/: session.py
app/db/models/: chat.py  chat_messages.py  note.py
app/routes/: agent.py  notes.py
app/schemas/: note.py
src/: config.py  dependencies.py  main.py
src/agents/: rag_sql.py
src/db/: session.py
src/db/models/: chat.py  chat_messages.py  note.py
src/routes/: agent.py  notes.py
