[project]
name = "notes-ai-agent-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.8",
    "google-generativeai>=0.8.4",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
]
